@@ -32,7 +32,7 @@ Registration_data::load_input_files (Registration_parms* regp)
     logfile_printf ("Loading fixed image: %s\n", regp->fixed_fn);
     this->fixed_image = plm_image_load (regp->fixed_fn, image_type);
 
-    logfile_printf ("Loading moving image: %s\n", regp->fixed_fn);
+    logfile_printf ("Loading moving image: %s\n", regp->moving_fn);
     this->moving_image = plm_image_load (regp->moving_fn, image_type);
 
     /* Load masks */
