@@ -1,7 +1,8 @@
 Version 1.5.6 (build @PLASTIMATCH_SVN_VERSION@)
 @TIMESTAMP@
 * Fix memory error with large image sizes
-* Fix problem putting bspline stage after demons stage
+* Fix program abort when putting bspline stage after demons stage
+* Bspline warper is now multi-threaded
 * Improve portability to big-endian, unsigned char platforms
 
 Version 1.5.5 (build 2868)
